[package]
name = "error-code"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
error-code-derive = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
error-code = { workspace = true }
http = { workspace = true }
